--- a/ramdisk/init.samsungexynos8895.rc
+++ b/ramdisk/init.samsungexynos8895.rc
@@ -15,6 +15,8 @@ on init
     start watchdogd
     mkdir /preload 0771 system system
 
+    export LD_SHIM_LIBS "/system/lib/hw/fingerprint.vendor.exynos5.so|/system/lib/libbauthtzcommon_shim.so:/system/lib64/hw/fingerprint.vendor.exynos5.so|/system/lib64/libbauthtzcommon_shim.so´"
+
     # See storage config details at http://source.android.com/tech/storage/
     mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage/emulated 0555 root root
