--- a/ramdisk/ueventd.samsungexynos8895.rc
+++ b/ramdisk/ueventd.samsungexynos8895.rc
@@ -50,90 +50,88 @@
 
 # mscalers
 /dev/video50              0660   media      graphics
-/dev/m2m1shot_scaler0     0660   cameraserver      graphics
+/dev/m2m1shot_scaler0     0660   mediacodec      drmrpc
 
 /dev/video55              0666   system     graphics
+/dev/g2d                  0660   system     graphics
 /dev/fimg2d               0666   system     graphics
 /dev/i2c-2                0660   system     system
 /dev/HPD                  0660   system     system
 
 # mfc
-/dev/video6               0660   mediacodec      mediadrm
-/dev/video7               0660   media      mediadrm
-/dev/video8               0660   media      mediadrm
-/dev/video9               0660   media      mediadrm
+/dev/video6               0660   mediacodec mediadrm
+/dev/video7               0660   mediacodec mediadrm
+/dev/video8               0660   mediacodec mediadrm
+/dev/video9               0660   mediacodec mediadrm
 
 # camera
-/dev/video101             0660   cameraserver      cameraserver
-/dev/video102             0660   cameraserver      cameraserver
-/dev/video103             0660   cameraserver      cameraserver
-/dev/video104             0660   cameraserver      cameraserver
-/dev/video107             0660   cameraserver      cameraserver
-/dev/video109             0660   cameraserver      cameraserver
-/dev/video110             0660   cameraserver      cameraserver
-/dev/video111             0660   cameraserver      cameraserver
-/dev/video112             0660   cameraserver      cameraserver
-/dev/video120             0660   cameraserver      cameraserver
-/dev/video121             0660   cameraserver      cameraserver
-/dev/video122             0660   cameraserver      cameraserver
-/dev/video130             0660   cameraserver      cameraserver
-/dev/video131             0660   cameraserver      cameraserver
-/dev/video132             0660   cameraserver      cameraserver
-/dev/video140             0660   cameraserver      cameraserver
-/dev/video141             0660   cameraserver      cameraserver
-/dev/video142             0660   cameraserver      cameraserver
-/dev/video151             0660   cameraserver      cameraserver
-/dev/video152             0660   cameraserver      cameraserver
-/dev/video160             0660   cameraserver      cameraserver
-/dev/video161             0660   cameraserver      cameraserver
-/dev/video170             0660   cameraserver      cameraserver
-/dev/video171             0660   cameraserver      cameraserver
-/dev/video172             0660   cameraserver      cameraserver
-/dev/video173             0660   cameraserver      cameraserver
-/dev/video174             0660   cameraserver      cameraserver
-/dev/video180             0660   cameraserver      cameraserver
-/dev/video190             0660   cameraserver      cameraserver
-/dev/video191             0660   cameraserver      cameraserver
-/dev/video192             0660   cameraserver      cameraserver
-/dev/video193             0660   cameraserver      cameraserver
-/dev/video210             0660   cameraserver      cameraserver
-/dev/video211             0660   cameraserver      cameraserver
-/dev/video212             0660   cameraserver      cameraserver
-/dev/video213             0660   cameraserver      cameraserver
-/dev/video214             0660   cameraserver      cameraserver
-/dev/video215             0660   cameraserver      cameraserver
-/dev/video216             0660   cameraserver      cameraserver
-/dev/video217             0660   cameraserver      cameraserver
-/dev/video218             0660   cameraserver      cameraserver
-/dev/video219             0660   cameraserver      cameraserver
-/dev/video220             0660   cameraserver      cameraserver
-/dev/video221             0660   cameraserver      cameraserver
-/dev/video222             0660   cameraserver      cameraserver
-/dev/video223             0660   cameraserver      cameraserver
-/dev/video224             0660   cameraserver      cameraserver
-/dev/video225             0660   cameraserver      cameraserver
+/dev/video101             0660   cameraserver camera
+/dev/video102             0660   cameraserver camera
+/dev/video103             0660   cameraserver camera
+/dev/video104             0660   cameraserver camera
+/dev/video107             0660   cameraserver camera
+/dev/video109             0660   cameraserver camera
+/dev/video110             0660   cameraserver camera
+/dev/video111             0660   cameraserver camera
+/dev/video112             0660   cameraserver camera
+/dev/video120             0660   cameraserver camera
+/dev/video121             0660   cameraserver camera
+/dev/video122             0660   cameraserver camera
+/dev/video130             0660   cameraserver camera
+/dev/video131             0660   cameraserver camera
+/dev/video132             0660   cameraserver camera
+/dev/video140             0660   cameraserver camera
+/dev/video141             0660   cameraserver camera
+/dev/video142             0660   cameraserver camera
+/dev/video151             0660   cameraserver camera
+/dev/video152             0660   cameraserver camera
+/dev/video160             0660   cameraserver camera
+/dev/video161             0660   cameraserver camera
+/dev/video170             0660   cameraserver camera
+/dev/video171             0660   cameraserver camera
+/dev/video172             0660   cameraserver camera
+/dev/video173             0660   cameraserver camera
+/dev/video174             0660   cameraserver camera
+/dev/video180             0660   cameraserver camera
+/dev/video190             0660   cameraserver camera
+/dev/video191             0660   cameraserver camera
+/dev/video192             0660   cameraserver camera
+/dev/video193             0660   cameraserver camera
+/dev/video210             0660   cameraserver camera
+/dev/video211             0660   cameraserver camera
+/dev/video212             0660   cameraserver camera
+/dev/video213             0660   cameraserver camera
+/dev/video214             0660   cameraserver camera
+/dev/video215             0660   cameraserver camera
+/dev/video216             0660   cameraserver camera
+/dev/video217             0660   cameraserver camera
+/dev/video218             0660   cameraserver camera
+/dev/video219             0660   cameraserver camera
+/dev/video220             0660   cameraserver camera
+/dev/video221             0660   cameraserver camera
+/dev/video222             0660   cameraserver camera
+/dev/video223             0660   cameraserver camera
+/dev/video224             0660   cameraserver camera
+/dev/video225             0660   cameraserver camera
 /dev/media2               0660   media      media
 /dev/hdcp2                0660   media      media
 
 # jpeg
 /dev/m2m1shot_jpeg	  0660   media      media
-/dev/video12              0660   media      media
+/dev/video12              0660   cameraserver media
 
 # audio
 /dev/seiren               0660   system     audio
 
+# MobiCore
+#/dev/mobicore             0600   drmrpc     drmrpc
+#/dev/mobicore-user        0660   drm        drmrpc
+
+# Secure MEM driver
+#/dev/s5p-smem             0660   drm        drmrpc
+
 #temporary
 /data/modem.bin           0400   radio      system
-
-# DM tools
-/dev/umts_dm0             0660   radio      radio
-/dev/umts_router          0660   radio      radio
-
-# SIPC RIL
-/dev/umts_boot0           0660   radio      radio
-/dev/umts_ipc0            0660   radio      radio
-/dev/umts_ipc1            0660   radio      radio
-/dev/umts_rfs0            0660   radio      radio
 
 # Modem Interface
 /dev/block/platform/11120000.ufs/by-name/RADIO	0660   system     radio
@@ -156,8 +154,6 @@
 /sys/devices/system/cpu/cpu*	cpufreq/interactive/input_boost			0660	system	system
 /sys/devices/system/cpu/cpu*	cpufreq/interactive/boostpulse_duration		0660	system	system
 /sys/devices/system/cpu/cpu*	cpufreq/interactive/io_is_busy			0660	system	system
-/sys/devices/system/cpu/cpu*	cpufreq/interactive/param_index			0660	system	system
-/sys/devices/system/cpu/cpu*	cpufreq/interactive/mode				0660	system	system
 
 # Vision (VPU, SCORE)
 /dev/vertex0             0660   media      media
@@ -167,6 +163,7 @@
 # sensor sysfs properties
 /sys/devices/virtual/input/input*	poll_delay	0660	system	radio
 /sys/devices/virtual/input/input*	enable		0660	system	radio
+/dev/input/event*         0660   system        input
 
 # Sensorhub IIO
 /dev/ssp_sensorhub        0660   system		system
@@ -175,6 +172,7 @@
 /sys/devices/platform/108c0000.spi/spi_master/spi10/spi10.0/iio:device*    buffer/enable       0660    system    system
 /sys/devices/platform/108c0000.spi/spi_master/spi10/spi10.0/iio:device*    buffer/length       0660    system    system
 /sys/bus/iio/devices/iio:device*    0664   system     radio
+/sys/bus/iio/devices/iio:device*	poll_delay	0660	system	system
 
 # Broadcom Sensorhub Bridge Driver
 /dev/bbd_sensor           0660   system     system
@@ -191,21 +189,6 @@
 # Reactivation lock
 /dev/block/platform/11120000.ufs/by-name/STEADY    0660    system    system
 
-# CDMA radio interface MUX
-/dev/ts0710mux*           0640   radio      radio
-/dev/ppp                  0660   radio      vpn
-
-# sysfs properties
-/sys/devices/platform/trusty.*      trusty_version        0440  root   log
-/sys/devices/virtual/input/input*   enable      0660  root   input
-/sys/devices/virtual/input/input*   poll_delay  0660  root   input
-/sys/devices/virtual/usb_composite/*   enable      0664  root   system
-/sys/devices/system/cpu/cpu*   cpufreq/scaling_max_freq   0664  system system
-/sys/devices/system/cpu/cpu*   cpufreq/scaling_min_freq   0664  system system
-
-# DVB API device nodes
-/dev/dvb*                 0660   root       system
-
 # MobiCore
 /dev/mobicore             0700   system     system
 /dev/mobicore-user        0666   radio     system
@@ -213,10 +196,7 @@
 # Secure MEM driver
 /dev/s5p-smem             0660   system     system
 
-# sensorhub
-/dev/ssp_sensorhub        0660   system     system
-/dev/ssp_data_injection   0660   system     system
-
 # Fingerprint Sensor
-/dev/vfsspi        0660   system     system
-/dev/esfp0        0660   system     system
+/dev/vfsspi               0660   system     system
+/dev/esfp0                0660   system     system
+/dev/goodix_fp            0660   system     system
