--- a/configs/audio/stage_policy.conf
+++ b/configs/audio/stage_policy.conf
@@ -1,19 +1,32 @@
 primary {
     output {
         flags AUDIO_OUTPUT_FLAG_DEEP_BUFFER
-        mixertype MIXER											
+        mixertype MIXER
         opendevice AUDIO_DEVICE_OUT_SPEAKER
-        main {                             
-            normal {                         
-                samplerate 48000								
-                format AUDIO_FORMAT_PCM_16_BIT  
+        main {
+            normal {
+                samplerate 48000
+                format AUDIO_FORMAT_PCM_16_BIT
                 channel AUDIO_CHANNEL_OUT_STEREO
-                prefx STAGE_EFFECT_NONE					
+                globalfx STAGE_EFFECT_NONE
+                prefx STAGE_EFFECT_NONE
                 postfx STAGE_EFFECT_SOUNDBOOSTER
-                sub1 {                          
-                    streamtype AUDIO_STREAM_MUSIC 
+                sub1 {
+                    streamtype AUDIO_STREAM_MUSIC
                     prefx STAGE_EFFECT_SOUNDALIVE_PLUS
                     postfx STAGE_EFFECT_ADAPTSOUND|STAGE_EFFECT_SOUNDBOOSTER
+                }
+            }
+            normal_wide {
+                samplerate 48000
+                format AUDIO_FORMAT_PCM_8_24_BIT
+                channel AUDIO_CHANNEL_OUT_STEREO
+                prefx STAGE_EFFECT_NONE
+                postfx STAGE_EFFECT_NONE
+                sub1 {
+                    streamtype AUDIO_STREAM_MUSIC
+                    prefx STAGE_EFFECT_NONE
+                    postfx STAGE_EFFECT_NONE
                 }
             }
             uhq {
@@ -21,11 +34,11 @@ primary {
                 format AUDIO_FORMAT_PCM_8_24_BIT
                 channel AUDIO_CHANNEL_OUT_STEREO
                 prefx STAGE_EFFECT_NONE
-                postfx STAGE_EFFECT_SOUNDBOOSTER
+                postfx STAGE_EFFECT_NONE
                 sub1 {
                     streamtype AUDIO_STREAM_MUSIC
                     prefx STAGE_EFFECT_SOUNDALIVE_PLUS
-                    postfx STAGE_EFFECT_ADAPTSOUND|STAGE_EFFECT_SOUNDBOOSTER
+                    postfx STAGE_EFFECT_ADAPTSOUND
                 }
             }
             suhq {
@@ -36,8 +49,8 @@ primary {
                 postfx STAGE_EFFECT_NONE
                 sub1 {
                     streamtype AUDIO_STREAM_MUSIC
-                    prefx STAGE_EFFECT_SOUNDALIVE_PLUS
-                    postfx STAGE_EFFECT_ADAPTSOUND
+                    prefx STAGE_EFFECT_NONE
+                    postfx STAGE_EFFECT_NONE
                 }
             }
         }
@@ -54,6 +67,7 @@ low {
                 samplerate 48000
                 format AUDIO_FORMAT_PCM_16_BIT
                 channel AUDIO_CHANNEL_OUT_STEREO
+                globalfx STAGE_EFFECT_NONE
                 prefx STAGE_EFFECT_NONE
                 postfx STAGE_EFFECT_NONE
                 sub1 {
@@ -107,7 +121,19 @@ a2dp {
                     prefx STAGE_EFFECT_SOUNDALIVE_PLUS
                     postfx STAGE_EFFECT_ADAPTSOUND
                 }
-            }			
+            }
+            dynamic {
+                samplerate dynamic
+                format dynamic
+                channel dynamic
+                prefx STAGE_EFFECT_NONE
+                postfx STAGE_EFFECT_NONE
+                sub1 {
+                    streamtype AUDIO_STREAM_MUSIC
+                    prefx STAGE_EFFECT_SOUNDALIVE_PLUS
+                    postfx STAGE_EFFECT_ADAPTSOUND
+                }
+            }
         }
     }
 }
@@ -115,16 +141,16 @@ a2dp {
 offload {
     output {
         flags AUDIO_OUTPUT_FLAG_COMPRESS_OFFLOAD
-            mixertype OFFLOAD
-            opendevice AUDIO_DEVICE_OUT_SPEAKER
-            main {
-                normal {
-                    samplerate 48000
-                    format AUDIO_FORMAT_PCM_16_BIT
-                    channel AUDIO_CHANNEL_OUT_STEREO
-                    prefx STAGE_EFFECT_SOUNDALIVE_PLUS_PROXY
-                    postfx STAGE_EFFECT_ADAPTSOUND_PROXY
-                }
+        mixertype OFFLOAD
+        opendevice AUDIO_DEVICE_OUT_SPEAKER
+        main {
+            normal {
+                samplerate 48000
+                format AUDIO_FORMAT_PCM_16_BIT
+                channel AUDIO_CHANNEL_OUT_STEREO
+                prefx STAGE_EFFECT_SOUNDALIVE_PLUS_PROXY
+                postfx STAGE_EFFECT_ADAPTSOUND_PROXY
             }
+        }
     }
 }
