--- a/configs/gps/lhd.conf
+++ b/configs/gps/lhd.conf
@@ -7,7 +7,7 @@ LheClockMHz=100
 GpioNPowerPath=/sys/class/sec/sensorhub/mcu_power
 GpioNStdbyPath=/sys/class/sec/gps/GPS_PWR_EN/value
 
-LhePatch=/system/bin/bcm_sensorhub_a1.patch
+#LhePatch=/system/bin/bcm_sensorhub_a1.patch 
 LhePatch=/dev/bbd_patch
 # After retrying 4 times it will go to forever sleep.
 LheMaxMcuResetTries=4
@@ -20,9 +20,9 @@ LheBbdSensor=/dev/bbd_sensor
 
 # For developement stage, we need to set this on.
 # For production stage, we should set this off.
-LheFailSafe=ON
-LheFailSafe=BINFILE=/data/system/gps/esw-crash-dump.bin
-LheFailSafe=LOG
+# LheFailSafe=ON
+LheFailSafe=BINFILE=/data/system/gps/esw-crash-dump.hex
+# LheFailSafe=LOG
 
 Lhe477xDebugFlags=RPC:FACILITY=33:STDOUT_PUTS:STDOUT_LOG
 # LheConsole=/data/system/gps/LheConsole
